--- a/src/Components/PhotoGallery/CardGallery.module.css
+++ b/src/Components/PhotoGallery/CardGallery.module.css
@@ -1,23 +1,24 @@
-.cardContainer{
+.cardContainer {
     margin-top: 5rem;
     padding-left: 50px;
     padding-right: 50px;
     margin-bottom: 5rem;
 }
 
+
 .cardBody{
     text-align: center;
 }
 
 .cardBodyNext{
-    cursor: pointer;
+    
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
+    /*box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);*/
     transition: transform 0.3s ease-in-out;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 }
 
 .cardBodyNext:hover {
@@ -29,6 +30,12 @@
     display: flex;
     align-items: center;
     font-family: "Bebas Neue", sans-serif;
+    
+  }
+
+  .cardTextNext{
+    cursor: pointer;
+
   }
 
   .cardText {
@@ -176,7 +183,7 @@
         line-height: 25px;
     }
     .cardContainer{
-        margin-top: 0rem;
+        margin-top: 2rem;
         padding-left: 30px;
         padding-right: 30px;
         margin-bottom: 0rem;
@@ -184,6 +191,7 @@
     .cardBodyNext{
         color: rgba(255, 0, 0, 0.5);
         font-size: 1.5rem;
+        border: none;
     }  
     .cardTextNext{
         font-family: "Bebas Neue", sans-serif;
@@ -192,6 +200,10 @@
         align-items: center;
         justify-content: center;
         height: 20px;
+    }
+    .rowContainer{
+        display: flex;
+        justify-content: center;
     }    
   }
   
