--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -2,6 +2,7 @@
 
 .wrapper{
     display: flex;
+    height: 50vh;
 }
 
 .image-container {
@@ -10,12 +11,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
+    max-height: 50vh;
     background-image: url('../../Assets/CakesPicture/splashbackground.png');
     background-position: center center;
     background-size: 100%;
     background-repeat: no-repeat;
-    margin-top: 2rem;
+    
   }
 
   .image-containerMoblie{
@@ -249,12 +250,13 @@
 
   .image {
     max-width: 100%;
-    max-height: 80%;
+    max-height: 100%;
   }
   .h1TextBox{
     justify-content: start !important;
     display: flex !important;
     flex: 1 !important;
+    margin-top: 4rem;
   }
   .svgArrow{
     display: block;
@@ -266,14 +268,14 @@
     background-image: url('../../Assets/CakesPicture/splashbackground2.png');
     display: flex;
     justify-content: center;
-    background-position: center center;
-    background-size: 100%;
+    background-position: right;
+    background-size: 80%;
     background-repeat: no-repeat;
-    padding-left: 15%;
+    padding-left: 25%;
     height: 100vh;
   }
   .text{
-    font-size: 1.4rem !important;
+    font-size: 1.2rem !important;
     margin: 40px 0px 40px 0px !important;
     text-align: center !important;
     line-height: 1.2;
