--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -10,6 +10,10 @@
     text-align: center;
     background-color: white;
   }
+
+  .section{
+    height: 100vh;
+  }
   
   blockquote {
     max-width: 80%;
