--- a/src/Components/Layout/CurtainMenu.module.css
+++ b/src/Components/Layout/CurtainMenu.module.css
@@ -7,25 +7,10 @@
   top: 3rem;
   background-color: rgba(0, 0, 0, 0.8);
   transition: height 0.5s ease;
-  overflow: hidden;
-}
-
-.menuCard {
-  transition: 0.3s;
+  overflow: auto;
 }
 
 
-.overlayContent {
-  position: relative;
-  top: 5%;
-  width: 100%;
-  text-align: center;
-}
-
-.rowCard{
-  display: flex; /* Flexbox elrendezés */
-  justify-content: space-around;
-}
 
 .overlayOpen {
   height: 100%;
@@ -59,6 +44,23 @@
     font-size: 60px;
   }
 
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 1rem;
+  }
+  
+  .box {
+    width: 250px;
+    height: 250px;
+    width: calc(25% - 20px);
+    margin-bottom: 20px;
+    position: relative;
+    overflow: hidden;
+  }
 
   /* Extra kicsi készülékek (telefonok, 576px és alatt) */
 @media (max-width: 575.98px) {
@@ -69,24 +71,120 @@
     top: 0px;
     right: 35px;
   }
-  .menuCard{
-    width: 10rem !important;
-
+  .box {
+    width: calc(50% - 5px);
+    margin: 0 2px 10px 2px;
+    position: relative;
   }
-  .rowCard{
-    margin-left: auto !important;
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 100%;
+    margin: 0 auto;
+    margin-top: 1rem;
+  }
+  .text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 2rem;
+    font-family: "Bebas Neue", serif;
+    color: #fff;
+    text-shadow: 1px 1px #000;
+    transition: font-size 0.3s ease-in-out;
+    cursor: pointer;
   }
 }
 
 /* Kicsi készülékek (tabletek, 576px és 767px között) */
 @media (min-width: 576px) and (max-width: 767.98px) {
+  .box {
+    width: calc(100% - 20px);
+    margin: 0 10px 20px 10px;
+    position: relative;
+  }
+}
 
+.box img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.8s ease-in-out;
+  cursor: pointer;
+  filter: brightness(0.6);
+}
+
+.box:hover img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.8s ease-in-out;
+  cursor: pointer;
+  filter: brightness(0.9);
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 2rem;
+  font-family: "Bebas Neue", serif;
+  color: #fff;
+  text-shadow: 1px 1px #000;
+  transition: font-size 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 /* Közepes készülékek (tabletek, 768px és 991px között) */
 @media (min-width: 768px) and (max-width: 991.98px) {
-
+  .box {
+    width: calc(33.33% - 20px);
+    margin: 0 10px 20px 10px;
+    position: relative;
+  }
 }
+
+.box img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.8s ease-in-out;
+  cursor: pointer;
+  filter: brightness(0.6);
+}
+
+.box:hover img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.8s ease-in-out;
+  cursor: pointer;
+  filter: brightness(0.9);
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 1.7rem;
+  font-family: "Bebas Neue", serif;
+  color: #fff;
+  text-shadow: 1px 1px #000;
+  transition: font-size 0.3s ease-in-out;
+  cursor: pointer;
+}
+
 
 /* Nagy készülékek (asztali gépek, 992px és 1199px között) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
